- fixed small pickle bug(s) with lazy loaders [ticket:265] [ticket:267]
- fixed possible error in mysql reflection where certain versions
return an array instead of string for SHOW CREATE TABLE call
- fix to lazy loads when mapping to joins [changeset:1770]
- all create()/drop() calls have a keyword argument of "connectable".
"engine" is deprecated.

0.2.6
- big overhaul to schema to allow truly composite primary and foreign
key constraints, via new ForeignKeyConstraint and PrimaryKeyConstraint
objects.
Existing methods of primary/foreign key creation have not been changed
but use these new objects behind the scenes.  table creation
and reflection is now more table oriented rather than column oriented.
[ticket:76]
- overhaul to MapperExtension calling scheme, wasnt working very well 
previously
- tweaks to ActiveMapper, supports self-referential relationships
- slight rearrangement to objectstore (in activemapper/threadlocal)
so that the SessionContext is referenced by '.context' instead
of subclassed directly.
- activemapper will use threadlocal's objectstore if the mod is
activated when activemapper is imported
- small fix to URL regexp to allow filenames with '@' in them
- fixes to Session expunge/update/etc...needs more cleanup.
- select_table mappers *still* werent always compiling
- fixed up Boolean datatype
- added count()/count_by() to list of methods proxied by assignmapper;
this also adds them to activemapper
- connection exceptions wrapped in DBAPIError
- ActiveMapper now supports autoloading column definitions from the
database if you supply a __autoload__ = True attribute in your
mapping inner-class.  Currently this does not support reflecting 
any relationships.
- deferred column load could screw up the connection status in 
a flush() under some circumstances, this was fixed
- expunge() was not working with cascade, fixed.
- potential endless loop in cascading operations fixed.
- added "synonym()" function, applied to properties to have a 